include computed values in view test.

--- a/Contacts/app/views/contact/index.html.erb
+++ b/Contacts/app/views/contact/index.html.erb
@@ -4,6 +4,6 @@
 
 <ul>
 <% @contact_list.each do |contact| %>
-  <li><%= contact.first_name %> <%= contact.last_name %></li>
+  <li><%= contact.first_name %> <%= contact.last_name %> <%= contact.age %></li>
 <% end %>
 </ul>
